--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="Stylesheet" href="./style/style.css" />
     <title>Document</title>
   </head>
   <body>
