variable creation in saas

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <link rel="Stylesheet" href="./style/style.css" />
-    <title>Document</title>
+    <title>Saas Learning</title>
   </head>
   <body>
     <h1>Haaaai</h1>
+
+    <h2>Heloooo</h2>
   </body>
 </html>
