--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <h1>Haaaai</h1>
 
     <h2>Heloooo</h2>
+    <button class="button">Click me</button>
+    <button class="secondButton">Suck me</button>
   </body>
 </html>
